# beiboot

./: Dockerfile  README.md  codecov.yml  version.py
.github/workflows/: cd.yaml  ci.yaml  docker-build-multiarch.yaml  python-linter.yaml  release_notifications.yaml
beiboot/: utils.py
beiboot/handler/: configure.py
beiboot/resources/: crds.py
client/: README.md  pyoxidizer.bzl  pyproject.toml  setup.cfg
client/beiboot/: api.py  configuration.py  types.py  utils.py
client/beiboot/api/: __init__.py  connect.py  create.py  create_shelf.py  delete.py  delete_shelf.py  heartbeat.py  list.py  list_shelves.py  read.py  read_shelf.py
client/beiboot/connection/: abstract.py  factory.py  types.py  utils.py
client/beiboot/connection/dummy/: __init__.py
client/beiboot/connection/ghostunnel/: __init__.py  docker.py  native.py
client/beiboot/misc/: install.py  uninstall.py
client/beiboot/misc/comps/: __init__.py  configmap.py  deployment.py  namespace.py  rbac.py  webhook.py
client/cli/: __init__.py  __main__.py  cluster.py  connect.py  console.py  install.py  shelf.py  utils.py
client/testing/: exec.py
client/tests/: conftest.py  utils.py
client/tests/cli/: test_beibootctl.py  test_create.py  test_delete.py  test_install.py  test_list.py  test_shelf_create.py  test_shelf_delete.py  test_shelf_list.py
client/tests/e2e/: base.py  test_base_setup.py  test_connect_cluster.py  test_connection_data.py  test_create_cluster.py  test_heartbeat.py  test_list_cluster.py  test_list_shelves.py  test_shelf.py
client/tests/fixtures/: simple-beiboot.yaml
client/tests/unit/: test_api.py  test_connections.py  test_connectors.py  test_installer.py  test_utils.py
operator/: .coveragerc  DEVELOPMENT.md  Dockerfile  client-cert.pem  client-key.pem  main.py  pyproject.toml  san.cnf  setup.cfg
operator/beiboot/: clusterstate.py  configuration.py  purge.py  shelfstate.py  utils.py
operator/beiboot/comps/: client_timeout.py  gefyra.py  ghostunnel.py
operator/beiboot/handler/: __init__.py  beiboots.py  cleanup.py  clusters.py  components.py  configure.py  mutation.py  shelves.py  validation.py
operator/beiboot/provider/: abstract.py  factory.py
operator/beiboot/provider/k3s/: __init__.py  utils.py
operator/beiboot/resources/: configmaps.py  crds.py  k3s.py  services.py  utils.py
operator/manifests/: beiboot-gke.yaml  beiboot.yaml
operator/tests/: conftest.py  utils.py
operator/tests/e2e/: base.py  conftest.py  test_client_timeout.py  test_cluster_lifecycle.py  test_cluster_sunset.py  test_run_configured_cluster.py  test_run_simple_cluster.py  test_shelf.py
operator/tests/fixtures/: configured-beiboot.yaml  shelf-beiboot-restore.yaml  shelf-beiboot.yaml  shelf.yaml  simple-beiboot.yaml  sunset-beiboot.yaml  timeout-beiboot.yaml  volume-snapshot-class.yaml  volume-snapshot-content.yaml
operator/tests/unit/: test_a_resources.py  test_configs.py  test_provider_k3s.py  test_resources.py  test_utils.py
testing/: create_bbt.py  delete_bbt.py  k3s.yaml
