[tool.poetry]
name = "beiboot"
version = "1.4.1"
description = "Getdeck Beiboot client project."
authors = ["Michael Schilonka <michael@blueshoe.de>"]
readme = "README.md"
homepage = "https://getdeck.dev"
repository = "https://github.com/Getdeck/beiboot"
documentation = "https://getdeck.dev"
keywords = [
    "Kubernetes",
    "Development",
    "Cloud-native"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]
exclude = ["cli"]

[tool.poetry.dependencies]
python = "^3.9"
kubernetes = "^23.3.0"
docker = "^6.0.0"
chardet = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.4"
coverage = "^6.5.0"
pytest-asyncio = "^0.20.2"
mypy = "^0.991"
kopf = "^1.36.0"
python-decouple = "^3.5"
certbuilder = "^0.14.2"
python-statemachine = "^0.8.0"
click = "^8.1.3"
prompt-toolkit = "^3.0.33"
tabulate = "^0.9.0"
types-pyyaml = "^6.0.12.2"
pytest-kubernetes = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["beiboot"]

[tool.poetry.scripts]
beibootctl = "cli.__main__:main"

[tool.mypy]
python_version = "3.9"
packages = "beiboot"
ignore_missing_imports = "True"

[tool.pytest]
log_cli = true
log_cli_level = "INFO"
cluster_timeout = 240
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"
addopts = """
	--strict-markers
	--doctest-modules
	--tb=short
	--ignore-glob=main.py
    --ignore-glob=./beiboot/**
"""
testpaths = "tests"
pythonpath = "client"

[tool.pytest.ini_options]
pythonpath = [
  "."
]