[tool.poetry]
name = "Getdeck Beiboot"
version = "1.1.0"
description = "Getdeck Beiboot is an Operator to manage logical Kubernetes on top of a Kubernetes host cluster"
authors = ["Michael Schilonka <michael@blueshoe.de>"]

[tool.poetry.dependencies]
python = "^3.9"
kopf = "^1.35.0"
kubernetes = "^22.6.0"
python-decouple = "^3.5"
certbuilder = "^0.14.2"
python-statemachine = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.4"
coverage = "^6.5.0"
pytest-asyncio = "^0.20.2"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
createbbt = "testing.create_bbt:create_k3s_beiboot"

[tool.mypy]
python_version = "3.9"
packages = "beiboot"
ignore_missing_imports = "True"
